# MeshEditor

./: .gitignore  MeshEditor.py  README.md  pyproject.toml
MeshEditor/: setup.py
demos/: demo_BatchMeshEditior.py  demo_BatchMeshEditor.py  demo_MeshEditorEditMode.py  demo_MeshEditorLandmarkMode.py
img/: Recording_Landmark_mode.mov
src/MeshEditor/: MeshEditor.py
